--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
     box-sizing: border-box;
     font-family: Work Sans;
 }
-
 .container {
     max-width: 1440px;
     margin: 0 auto;
@@ -18,22 +17,24 @@
 .logo-text {
     margin-left: 20px;
 }
-
-/* ====================commmon css end==================================== */
+.text-gradina{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);;
+    -webkit-background-clip: text ;
+    -webkit-text-fill-color: transparent;
+}
+/* ====================nav css end==================================== */
 .logo {
     display: flex;
     align-items: center;
     font-size: 45px;
     font-weight: 700;
 }
-
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 37px 0;
 }
-
 nav .manu ul {
     display: flex;
     list-style: none;
@@ -42,14 +43,11 @@ nav .manu ul {
     align-items: center;
     font-size: 18px;
     font-weight: 500;
-
 }
-
 .n-b-img {
     display: flex;
     column-gap: 16px;
 }
-
 .nav-button {
     display: flex;
     column-gap: 24px;
@@ -57,12 +55,10 @@ nav .manu ul {
     background: #0b02231a;
     padding: 24px 17px;
 }
-
 .nav-btn {
     padding: 17px 24px;
 }
-
-/* ====================commmon css end==================================== */
+/* ====================banar pat css end==================================== */
 .banar {
     display: flex;
     justify-content: space-between;
@@ -110,7 +106,7 @@ text-transform: uppercase;
 .banar-button .button2{
     background: #4EC5F7;
 }
-/* ====================commmon css end==================================== */
+/* ====================we ar pat ar css end==================================== */
 #we-are{
 display: flex;
 justify-content: space-between;
@@ -122,17 +118,68 @@ margin-bottom: 176px;
 }
 #we-are .we-text{
     width: 50%;
+    
 }
 #we-are .we-img img{
     width: 100%;
 }
+.we-hadding{
+    text-align: right;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.we-discription{
+    color: #534C64;
+    text-align: right;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+.we-button{
+    padding: 21px 40px;
+    border-radius: 48px;
+    background: #FF42A5;
+    color: #fff;
+    display:block;
+    text-align:right ;
+    border: 0;
+    
+}
+.our{
+    color: #534C64;
+    text-align: right;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 300;
+}
+.unleash{
+    color: #534C64;
+    text-align: right;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+}
 
-/* ====================commmon css end==================================== */
+/* ====================online games css end==================================== */
 .game-hadding{
+
+    color: #0B0223;
     text-align: center;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 .game-tital{
+    color: #534C64;
     text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
 }
 .online-games-card{
     display: flex;
@@ -142,44 +189,12 @@ margin-bottom: 176px;
     text-align: center;
     width: 342px;
 }
-/* ====================commmon css end==================================== */
-#play-instantly{
-    display: flex;
-    align-items: center;
-    margin: 120px 0px;
-}
-.play-text{
-    width: 50%;
-}
-.play-img{
-    width: 100%;
-    position: relative;
-}
-.play-img2{
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    transform: translate(-50% ,50%);
-}
+/* ====================   ==================================== */
 
-/* ====================commmon css end==================================== */
-#play-games{
-    display: flex;
-    align-items: center;
-    margin: 400px 0px;
-    justify-content: space-between;
-}
-.games-img{
-    width: 100%;
-    position: relative;
-}
-.imgs2{
-    position: absolute;
-    top: 100%;
-    left: 100%;
-    transform: translate(-50% ,-50%);
-}
-/* ============================================================================== */
+
+
+
+/* ===========================careers css=================================================== */
 .careers-main{
     display: flex;
     align-items: center;
@@ -210,22 +225,54 @@ margin-bottom: 176px;
 #careers{
 background-color: #FF42A5;
 }
-/* ============================================================================== */
-#games-name-main{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.careers-hadding{
+    color: #FFF;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 60px;
 }
+.careers-contant{
+    color: #FFF;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
 
-.game-name{
-    border: 1.5px solid #FF42A5;
-    border-radius: 50px;
-    padding: 10px;
+}
+.careers-contant-lept{
+    color: #FFF;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 40px; }
+.careers-button{
+    display: inline-flex;
+    padding: 21px 40px;
+    border-radius: 48px;
+    background: #FFF;
+    border: 0;
+}
+/* ==============================careers css end================================================ */
+/* ==============================new css start================================================ */
+.games-only{
     display: flex;
     align-items: center;
-
 }
-/* ============================================================================== */
+.active{
+    border:1px solid #F948B2;
+    border-radius: 50px;
+}
+.games-only:hover{
+    border:1px solid #F948B2;
+    border-radius: 50px;
+}
+.game-ar-talika{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+/* ==============================new css end================================================ */
+/* ==============================footer css start================================================ */
 footer{
     color: #fff;
     background-color: #000;
@@ -255,5 +302,5 @@ justify-content: center;
     display: flex;
     justify-content: center;
     column-gap: 40px;
-    
 }
+/* =============================css end ========================================== */
