--- a/css/responcive.css
+++ b/css/responcive.css
@@ -33,7 +33,18 @@
     flex-direction: column;
 }
    /* ============================================== */
-
+   .playimain{
+    flex-direction: column;
+   }
+   .imgn{
+    width: 50%;
+   }
+   .img1{
+width: 90%;
+   }
+   .img2{
+width: 50%;
+   }
     /* ===================================== */
   
 /* ================== careers pat=================== */
@@ -46,6 +57,9 @@
 }
 .careers-text{
     width: 100%;
+}
+#careers{
+    margin-top: 100px;
 }
 /* ============================================== */
 /* ====================new part ========================== */
